# Realworld-Haskell

./: README.md
code/: code.cabal  stack.yaml
code/Ch01/: WC.hs
code/Ch02/: Type.hs
code/Ch03/: BookStore.hs
code/Ch04/: InteractWith  InteractWith.hs
code/Ch23/: .#Compressor.hs  Compressor.hs
code/src/Ch23-Concurrent-Multicore/: Compressor.hs
