name:                code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Numberartificial/code#readme
license:             BSD3
license-file:        LICENSE
author:              Numberartificial
maintainer:          c05118006@vip.qq.com
copyright:           MIT_2.0
category:            web-prod
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
